Fixed extra padding

--- a/src/App.css
+++ b/src/App.css
@@ -49,9 +49,9 @@
 }
 
 .page-container {
-  max-width: 1200px;
+  /*max-width: 1200px;*/
   margin: auto;
-  padding: 2rem;
+  /*padding: 2rem;*/
   position: relative;
 }
 
